tests/cuda/snapshots/cuda__core__add.snap
---
source: tests/cuda/core.rs
assertion_line: 15
expression: output
---
#include "descend.cuh"
/*
function declarations
*/
__host__ auto main(

    ) -> descend::i32;
/*
function definitions
*/
__host__ auto main(

    ) -> descend::i32 {
  const auto a = 10;
  const auto b = 32;
  return (a + b);
}
