tests/cuda/snapshots/cuda__core__constant.snap
---
source: tests/cuda/core.rs
assertion_line: 8
expression: output
---
#include "descend.cuh"
/*
function declarations
*/
__host__ auto main(

    ) -> descend::i32;
/*
function definitions
*/
__host__ auto main(

    ) -> descend::i32 {
  return 42;
}
