tests/cuda/snapshots/cuda__core__for_loop.snap
---
source: tests/cuda/core.rs
assertion_line: 57
expression: output
---
#include "descend.cuh"
/*
function declarations
*/
__host__ auto main(

    ) -> descend::i32;
/*
function definitions
*/
__host__ auto main(

    ) -> descend::i32 {
  auto sum = 0;
  for (std::size_t i = 0; (i < 10); i = (i + 1u)) {
    sum = (sum + 1);
  }

  return sum;
}
