tests/cuda/snapshots/cuda__core__if_else.snap
---
source: tests/cuda/core.rs
assertion_line: 50
expression: output
---
#include "descend.cuh"
/*
function declarations
*/
__host__ auto main(

    ) -> descend::i32;
/*
function definitions
*/
__host__ auto main(

    ) -> descend::i32 {
  const auto x = 10;
  const auto y = 20;
  if ((x < y)) {
    const auto result = (x + y);
  } else {
    const auto result = (x - y);
  }

  return 0;
}
