tests/cuda/snapshots/cuda__core__if_test.snap
---
source: tests/cuda/core.rs
assertion_line: 43
expression: output
---
#include "descend.cuh"
/*
function declarations
*/
__host__ auto main(

    ) -> descend::i32;
/*
function definitions
*/
__host__ auto main(

    ) -> descend::i32 {
  const auto x = 10;
  const auto y = 5;
  if ((x > y)) {
    const auto result = (x * 2);
  }

  return 42;
}
